# itcobkai

./: .dockerignore  .gitignore  Dockerfile  README.md  build.mjs  create_map.py  docker-compose.yml  index.html  main.py  master.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.mts  vitest.config.ts
.github/: copilot-instructions.md
.github/agents/: itcobkai-assistant.agent.md
.github/instructions/: api.instructions.md  src.instructions.md  tests.instructions.md
api/: adapter.py  api.py  auth.py  config.py  discord.py  logger.py  mapper.py  master.py  rtc.py  user.py  utils.py
api/api/: admin.py  auth.py  discord.py  lifespan.py  master.py  router.py
api/master/: connection_service.py  connections.py  grid.py  map_repository.py  mapper.py  master.py  position_store.py  user.py
api/rtc/: adapter.py  mixer.py  rtc.py  state.py
api/utils/: config.py  ids.py  logger.py  schema.py  utils.py
lambda/: build.mjs  package.json  pnpm-lock.yaml  tsconfig.json
lambda/src/: auth.ts  const.ts  discord.ts  disk.ts  index.ts  s3.ts  skyway.ts  slides.ts  token.ts  utils.ts
src/: App.tsx  Common.ts  Login.tsx  Main.tsx  Request.ts  Setup.tsx  Skyway.tsx  Test.tsx  index.css  index.tsx
src/common/: Common.ts  ImageLoader.ts  RTC.ts  Request.ts  Schema.ts
src/main/: AvatarLoader.ts  Connections.ts  Controller.ts  Cropper.ts  HostMessageDispatcher.ts  Main.tsx  (+10 more)
tests/: conftest.py  test_api.py  test_audio_rtc.py  test_connections.py  test_host_guest_commands.py  test_master_commands.py  test_mixer.py
tools/: add_bots.py  create_map.py  master.py
(+36 files in other folders)
