[project]
name = "itcobkai"
version = "0.1.0"
description = "サークルのOB会を大人数で行うために作成したボイスチャットです"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "livekit>=1.1.2",
    "livekit-agents>=1.4.4",
    "opencv-python>=4.13.0.92",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["livekit: LiveKit サーバーへの実接続が必要なテスト (DOMAIN 環境変数が必要)"]

[tool.ruff]
ignore = []
exclude = [
    "data/",
    "data/*",
    "node_modules/",
    ".git/",
    "dist/",
    "build/",
    "__pycache__/",
    ".venv/",
]
select = []
fixable = ["ALL"]
# [tool.ruff.per-file-ignores]
# "__init__.py" = ["F401"]
# "tests/*" = ["S101"]
